// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/StepList/Step NextButtonWithDisabled smoke-test 1`] = `
<div data-test-block="true">
  <ol class="StepList_stepList__XjLpY ">
    <li class="StepListStep_step__js1fz StepListStep_step_active__Pthdd ">
      <div class="StepListStep_stepSideWrapper__Mshb7 "
           tabindex="-1"
           aria-current="step"
      >
        <span class="StepListStep_stepCircle__wWmPq
        StepListStep_stepCircle_active__44uNJ">
          1
        </span>
        <div class="StepListStep_stepLine__BOJMv ">
        </div>
      </div>
      <h3 id="steptitle-:r9:"
          class="Heading_heading__7K0um Heading_heading_level5__CrIzo  StepListStep_stepHeading__Jg3rf"
      >
        tittel
      </h3>
      <div class="StepListStep_stepContent__1uagT StepListStep_stepContent_noButton__JAD3l 
          ">
        <div>
          Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
        </div>
      </div>
      <div class="StepListStep_nextLine__hWgXS">
      </div>
      <span class="StepListStep_buttonWrapper__mewkO">
        <button class="Button_button__pkuNv Button_button_primary__8Ouwo  "
                disabled
                type="button"
        >
          <span class="Button_buttonText__JxyB+">
            Neste
          </span>
        </button>
      </span>
    </li>
  </ol>
</div>
`;

exports[`Tester/StepList/Step NextButtonWithSpinner smoke-test 1`] = `
<div data-test-block="true">
  <ol class="StepList_stepList__XjLpY ">
    <li class="StepListStep_step__js1fz StepListStep_step_active__Pthdd ">
      <div class="StepListStep_stepSideWrapper__Mshb7 "
           tabindex="-1"
           aria-current="step"
      >
        <span class="StepListStep_stepCircle__wWmPq
        StepListStep_stepCircle_active__44uNJ">
          1
        </span>
        <div class="StepListStep_stepLine__BOJMv ">
        </div>
      </div>
      <h3 id="steptitle-:r8:"
          class="Heading_heading__7K0um Heading_heading_level5__CrIzo  StepListStep_stepHeading__Jg3rf"
      >
        tittel
      </h3>
      <div class="StepListStep_stepContent__1uagT StepListStep_stepContent_noButton__JAD3l 
          ">
        <div>
          Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
        </div>
      </div>
      <div class="StepListStep_nextLine__hWgXS">
      </div>
      <span class="StepListStep_buttonWrapper__mewkO">
        <button class="Button_button__pkuNv Button_button_primary__8Ouwo  "
                type="button"
        >
          <span class="Button_buttonText__JxyB+ Button_hide__dLd9W">
            Neste
          </span>
          <div aria-live="polite"
               aria-atomic="true"
               class="Spinner_spinner__RJ9Al Spinner_spinner_white__YLIF- Spinner_spinner_flexColumn__3SCpy Spinner_spinner_small__2mxjt Button_spinner__zF-nC "
          >
            <div class="Spinner_spinnerAnimation__nAt8p ">
            </div>
            <span class="Spinner_spinnerTitle__4A7b4 Spinner_srOnly__eRxJZ Spinner_spinnerTitle_centerText__ud193 ">
              Laster inn
            </span>
          </div>
        </button>
      </span>
    </li>
  </ol>
</div>
`;

exports[`Tester/StepList/Step WithAttributes play-test 1`] = `
<div data-test-block="true">
  <ol class="StepList_stepList__XjLpY ">
    <li id="htmlid"
        class="StepListStep_step__js1fz StepListStep_step_passive__MQSNI dummyClassname"
        lang="nb"
        data-testid="123ID"
    >
      <div class="StepListStep_stepSideWrapper__Mshb7 "
           id="htmlid-focus-target"
           tabindex="-1"
      >
        <span class="StepListStep_stepCircle__wWmPq
        StepListStep_stepCircle_passive__dU8i1">
          1
        </span>
        <div class="StepListStep_stepLine__BOJMv ">
        </div>
      </div>
      <h3 id="steptitle-htmlid"
          class="Heading_heading__7K0um Heading_heading_level5__CrIzo  StepListStep_stepHeading__Jg3rf"
      >
        title
      </h3>
      <div class="StepListStep_stepContent__1uagT StepListStep_stepContent_noButton__JAD3l 
          ">
        <div>
        </div>
      </div>
    </li>
  </ol>
</div>
`;

exports[`Tester/StepList/Step WithEditAccessibleDescription play-test 1`] = `
<div data-test-block="true">
  <ol class="StepList_stepList__XjLpY ">
    <li class="StepListStep_step__js1fz StepListStep_step_active__Pthdd ">
      <div class="StepListStep_stepSideWrapper__Mshb7 "
           tabindex="-1"
           aria-current="step"
      >
        <span class="StepListStep_stepCircle__wWmPq
        StepListStep_stepCircle_active__44uNJ">
          1
        </span>
        <div class="StepListStep_stepLine__BOJMv ">
        </div>
      </div>
      <h3 id="steptitle-:r6:"
          class="Heading_heading__7K0um Heading_heading_level5__CrIzo  StepListStep_stepHeading__Jg3rf"
      >
        tittel
      </h3>
      <div class="StepListStep_stepContent__1uagT  
          ">
        <div>
          Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
        </div>
        <button class="InlineButton_button__2aGtg InlineButton_button_withIconLeft__wsxa+  StepListStep_stepEditButton__4I4jx"
                type="button"
                aria-describedby="steptitle-:r6:"
        >
          <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz InlineButton_icon__YMesU"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M20.71 7.04c.39-.39.39-1.04 0-1.41l-2.34-2.34c-.37-.39-1.02-.39-1.41 0l-1.84 1.83 3.75 3.75 1.84-1.83ZM3 17.25V21h3.75L17.81 9.93l-3.75-3.75L3 17.25Z">
            </path>
          </svg>
          <span class>
            Endre
          </span>
        </button>
      </div>
    </li>
  </ol>
</div>
`;

exports[`Tester/StepList/Step WithFullWidthResult smoke-test 1`] = `
<div data-test-block="true">
  <ol class="StepList_stepList__XjLpY ">
    <li class="StepListStep_step__js1fz StepListStep_step_neutralResult__2WfLh ">
      <div class="StepListStep_stepSideWrapper__Mshb7 StepListStep_stepSideWrapper_result__yMOyt"
           tabindex="-1"
           aria-current="step"
      >
        <span class="StepListStep_stepCircle__wWmPq
        StepListStep_stepCircle_neutralResult__FtI1x">
          <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz StepListStep_stepCircleIcon__ceFIe"
               viewbox="0 0 24 24"
               focusable="false"
               aria-labelledby="svgtitle-:r5:"
               aria-hidden="false"
               role="img"
          >
            <title id="svgtitle-:r5:">
              Fullført
            </title>
            <path d="M21 7 9 19l-5.5-5.5 1.41-1.41L9 16.17 19.59 5.59 21 7Z">
            </path>
          </svg>
        </span>
        <div class="StepListStep_stepLine__BOJMv StepListStep_stepLine_neutralResult__s7I7X">
        </div>
      </div>
      <h3 id="steptitle-:r4:"
          class="Heading_heading__7K0um Heading_heading_level5__CrIzo  StepListStep_stepHeading__Jg3rf"
      >
        jeg er en tittel
      </h3>
      <div class="StepListStep_stepContent__1uagT StepListStep_stepContent_noButton__JAD3l StepListStep_stepContent_neutralResult__cWoyS StepListStep_stepContent_fullWidth__ExysN
          ">
        <div>
          Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
        </div>
      </div>
    </li>
  </ol>
</div>
`;

exports[`Tester/StepList/Step WithIconTitleAS play-test 1`] = `
<div data-test-block="true">
  <ol class="StepList_stepList__XjLpY ">
    <li class="StepListStep_step__js1fz StepListStep_step_active__Pthdd ">
      <div class="StepListStep_stepSideWrapper__Mshb7 "
           tabindex="-1"
           aria-current="step"
      >
        <span class="StepListStep_stepCircle__wWmPq
        StepListStep_stepCircle_active__44uNJ">
          <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz StepListStep_stepCircleIcon__ceFIe"
               viewbox="0 0 24 24"
               focusable="false"
               aria-labelledby="svgtitle-:r3:"
               aria-hidden="false"
               role="img"
          >
            <title id="svgtitle-:r3:">
              svg-tittel
            </title>
            <path d="M6 2h12v6l-4 4 4 4v6H6v-6l4-4-4-4V2Zm10 14.5-4-4-4 4V20h8v-3.5Zm-4-5 4-4V4H8v3.5l4 4ZM10 6h4v.75l-2 2-2-2V6Z">
            </path>
          </svg>
        </span>
        <div class="StepListStep_stepLine__BOJMv ">
        </div>
      </div>
      <h2 id="steptitle-:r2:"
          class="Heading_heading__7K0um Heading_heading_level5__CrIzo  StepListStep_stepHeading__Jg3rf"
      >
        jeg er en tittel
      </h2>
      <div class="StepListStep_stepContent__1uagT StepListStep_stepContent_noButton__JAD3l 
          ">
        <div>
          Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
        </div>
      </div>
    </li>
  </ol>
</div>
`;

exports[`Tester/StepList/Step WithRef play-test 1`] = `
<div data-test-block="true">
  <ol class="StepList_stepList__XjLpY ">
    <li class="StepListStep_step__js1fz StepListStep_step_passive__MQSNI "
        id="dummyIdForwardedFromRef"
    >
      <div class="StepListStep_stepSideWrapper__Mshb7 "
           tabindex="-1"
      >
        <span class="StepListStep_stepCircle__wWmPq
        StepListStep_stepCircle_passive__dU8i1">
          1
        </span>
        <div class="StepListStep_stepLine__BOJMv ">
        </div>
      </div>
      <h3 id="steptitle-:r0:"
          class="Heading_heading__7K0um Heading_heading_level5__CrIzo  StepListStep_stepHeading__Jg3rf"
      >
        title
      </h3>
      <div class="StepListStep_stepContent__1uagT StepListStep_stepContent_noButton__JAD3l 
          ">
        <div>
        </div>
      </div>
    </li>
  </ol>
</div>
`;
